--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,28 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCgUcY3ZTw5vWa-z4WUpRNQgTHW5aXdltc",
+      authDomain: "testing-training-e498b.firebaseapp.com",
+      projectId: "testing-training-e498b",
+      storageBucket: "testing-training-e498b.appspot.com",
+      messagingSenderId: "937555690164",
+      appId: "1:937555690164:web:56643468e5074095488de1",
+      measurementId: "G-2YQ5JHXS6W"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
