--- a/web/index.html
+++ b/web/index.html
@@ -35,8 +35,8 @@
     const serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-<!--  <script src="flutter.js" defer=""></script>-->
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="flutter.js" defer=""></script>
+<!--  <script src="flutter_bootstrap.js" async></script>-->
   
   
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
